# QuantumIdentityChain

./: .gitignore  Cargo.toml  Dockerfile  License  README.md
.github/workflows/: ci.yml
src/: main.rs
src/api/: routes.rs  server.rs
src/consensus/: pbft.rs  pos.rs  pow.rs
src/contracts/: attestation.rs  smart_contract.rs
src/core/: block.rs  blockchain.rs  identity.rs  sharding.rs
src/crypto/: encryption.rs  pqc.rs  qkd.rs  qrng.rs
src/network/: p2p.rs  peer.rs
src/utils/: config.rs  error.rs  logging.rs  monitoring.rs
